fix: hover on mobile

--- a/src/components/BottomNavigation.css
+++ b/src/components/BottomNavigation.css
@@ -8,6 +8,8 @@
   z-index: 100;
   border-radius: 0;
   padding: var(--size-padding) var(--size-padding) calc(var(--size-padding) + env(safe-area-inset-bottom));
+  border: none;
+  border-top: var(--size-1) solid var(--db-border);
 }
 
 .bottom-nav-link {
